3.3/policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: permitfront
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
        - protocol: TCP
          port: 443

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: permitback
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cashe
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: backend
      ports:
        - protocol: TCP
          port: 443
